fix(markdown): v2.2.0 렌더링 안정화 - breaks:true 적용 및 CDN 버전 고정
- marked.js CDN을 @latest에서 @15.0.6으로 고정하여 자동 업데이트로 인한 렌더링 변동 방지

- marked.setOptions({ breaks: true, gfm: true }) 추가로 단일 줄바꿈이 프리뷰에 즉시 반영

- # 제목 앞뒤의 줄바꿈 무시로 인한 텍스트 합치기 문제 및 --- Setext 헤딩 혼선 해결

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <!-- CodeMirror 6 is imported via ES Modules in app.js -->
 
     <!-- Marked.js (for Markdown rendering) -->
-    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <!-- [v2.2.0] marked.js 버전을 15.0.6으로 고정하여 CDN 자동 업데이트로 인한 렌더링 변동 방지 -->
+    <script src="https://cdn.jsdelivr.net/npm/marked@15.0.6/marked.min.js"></script>
     <!-- DOMPurify (for Markdown XSS Protection) -->
     <script src="https://cdn.jsdelivr.net/npm/dompurify@3.0.8/dist/purify.min.js"></script>
 
