feat(wordwrap): v2.4.0 슬라이딩 토글 스위치로 자동 줄바꿈 ON/OFF
- iOS/Android 스타일 슬라이딩 토글 스위치 UI (CSS 순수 구현)

- CM6 Compartment.reconfigure()로 에디터 재생성 없이 즉시 적용

- IndexedDB에 설정값 저장하여 재실행 시 마지막 상태 유지

- 5개국어 i18n 레이블: 줄바꿈/Wrap/折返し/換行/换行

--- a/index.html
+++ b/index.html
@@ -114,6 +114,15 @@
                     <i class="ph ph-markdown-logo"></i>
                     <span id="label-markdown">Markdown</span>
                 </button>
+                <!-- [v2.4.0] Word Wrap 슬라이딩 토글 스위치 -->
+                <div class="divider"></div>
+                <div class="wrap-toggle-container" title="자동 줄바꿈 (Word Wrap)">
+                    <span id="label-wordwrap" class="wrap-toggle-label">Wrap</span>
+                    <label class="toggle-switch" for="toggle-wordwrap">
+                        <input type="checkbox" id="toggle-wordwrap" aria-label="Word Wrap Toggle">
+                        <span class="toggle-slider"></span>
+                    </label>
+                </div>
             </div>
         </header>
 
