feat: v2.7.0 DropZone + Floating TOC + 로컬 타임머신
- 파일 드래그&드롭 오픈: document drop 이벤트 + 30개 확장자 필터 + 시각 오버레이

- 마크다운 Floating TOC: 프리뷰 DOM h1~h6 파싱  우측 목차 + 클릭 스크롤/커서 동기화

- 로컬 타임머신: 탭별 최근 10 스냅샷 자동 저장 (webmemo_snapshots IndexedDB 키)

--- a/index.html
+++ b/index.html
@@ -197,6 +197,8 @@
 
             </div>
             <div id="preview" class="markdown-preview hidden"></div>
+            <!-- [v2.7.0] 마크다운 Floating TOC -->
+            <nav id="md-toc" class="md-toc hidden"></nav>
         </main>
 
         <!-- Status Bar -->
