feat: v2.8.0 Vim 모드 (킬러 기능)
- @replit/codemirror-vim esm.sh 동적 로딩

- Compartment 패턴으로 런타임 Vim on/off (에디터 재생성 없음)

- 툴바 Vim 토글 스위치 (키보드 아이콘 + 슬라이딩 스위치)

- 기본값 OFF (일반 사용자 보호), IndexedDB 상태 저장

--- a/index.html
+++ b/index.html
@@ -130,6 +130,15 @@
                         <span class="toggle-slider"></span>
                     </label>
                 </div>
+                <!-- [v2.8.0] Vim 모드 슬라이딩 토글 스위치 -->
+                <div class="wrap-toggle-container" title="Vim 모드 (Terminal-style Editing)">
+                    <i class="ph ph-keyboard" style="font-size: 16px; color: var(--text-muted);"></i>
+                    <span id="label-vim" class="wrap-toggle-label">Vim</span>
+                    <label class="toggle-switch" for="toggle-vim">
+                        <input type="checkbox" id="toggle-vim" aria-label="Vim Mode Toggle">
+                        <span class="toggle-slider"></span>
+                    </label>
+                </div>
             </div>
         </header>
 
