feat: v3.0.0 Mermaid 다이어그램 + KaTeX 수학 공식 렌더링

--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
         integrity="sha384-vdScihEZCfbPnBQf+lc7LgXUdJVYyhC3yWHUW5C5P5GpHRqVnaM6HJELJxT6IqwM"
         crossorigin="anonymous"></script>
 
+    <!-- [v3.0.0] Mermaid.js (다이어그램 렌더링) -->
+    <!-- 순서도, 시퀀스, 간트, 클래스, 상태, ER, 파이, 마인드맵 등 13종+ 다이어그램 지원 -->
+    <script src="https://cdn.jsdelivr.net/npm/mermaid@11.12.3/dist/mermaid.min.js" defer></script>
+
+    <!-- [v3.0.0] KaTeX (수학 공식 렌더링) -->
+    <!-- LaTeX 구문의 수학 공식을 고속 렌더링 (MathJax 대비 100배 빠름) -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.28/dist/katex.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/katex@0.16.28/dist/katex.min.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/katex@0.16.28/dist/contrib/auto-render.min.js" defer></script>
+
     <!-- localForage (IndexedDB Wrapper for large capacity) -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/localforage/1.10.0/localforage.min.js"
         integrity="sha384-MTDrIlFOzEqpmOxY6UIA/1Zkh0a64UlmJ6R0UrZXqXCPx99siPGi8EmtQjIeCcTH"
